<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jaime.loginlinearlayout.LoginActivity"
    android:orientation="vertical"
    android:padding="@dimen/lly_login_padding"
    android:background="@color/colorPrimary"
    android:weightSum="1">


    <TextView
        android:id="@+id/txv_singIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/txv_singIn_margin"
        android:text="@string/txv_singIn"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <TextView
        android:id="@+id/txv_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txv_user"
        android:textAppearance="@android:style/TextAppearance.Small" />

    <EditText
        android:id="@+id/edt_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginBottom="@dimen/txv_singIn_margin"/>

    <TextView
        android:id="@+id/txv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txv_password"
        android:textAppearance="@android:style/TextAppearance.Small" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <LinearLayout
        android:id="@+id/lly_signOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/lly_signInOptions">

        <CheckBox
            android:id="@+id/cb_remember"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/cb_remember" />

        <TextView
            android:id="@+id/txv_signUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/txv_signup"
            android:textAppearance="@android:style/TextAppearance.Small" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_singIn"
        android:layout_width="@dimen/btn_singInWidth"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/btn_singIn"
        android:background="@color/colorFacebook"
        android:text="@string/txv_singIn"
        android:layout_weight="0.06" />

    <Button
        android:id="@+id/btn_googleSingIn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGoogle"
        android:drawableStart="@drawable/ic_google"
        android:text="@string/btn_googleSignIn"
        android:layout_marginBottom="@dimen/btn_google"/>

    <Button
        android:id="@+id/btn_facebooksingIn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorFacebook"
        android:drawableStart="@drawable/ic_facebook"
        android:text="@string/btn_facebookSignIn" />
</LinearLayout>
