<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/android.R.id.content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    tools:context="com.example.jaime.inventorydb.ui.inventory.InventoryActivity">
    <!-- strechColumns indica qué columna cogerá el espacio sobrante (zero-base) -->


    <TableRow>

        <TextView
            android:id="@+id/txv_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txvName"/>

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="LabelFor"/>
    </TableRow>


    <TableRow>

        <TextView
            android:id="@+id/txv_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txvDescription"/>

        <EditText
            android:id="@+id/edt_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine"
            tools:ignore="LabelFor"/>
    </TableRow>


    <TableRow>

        <TextView
            android:id="@+id/txv_creationDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txvCreationDate"/>

        <EditText
            android:id="@+id/edt_creationDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="LabelFor"/>
    </TableRow>


    <TableRow>

        <Button
            android:id="@+id/btn_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnChangeState"
            android:layout_gravity="center"
            android:layout_span="2"/>
    </TableRow>
</TableLayout>
