<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/android.R.id.content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.jaime.inventorydb.ui.product.ProductActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp">

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="32dp" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="14:7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_product" />

        <android.support.constraint.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="left"
            app:constraint_referenced_ids="edt_product_name,edt_product_serial,edt_product_seller,editText2,sp_product_category,sp_product_subcategory,sp_product_type,editText3,edt_product_price,edt_product_date" />

        <TextView
            android:id="@+id/txv_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/product_name"
            app:layout_constraintEnd_toEndOf="@+id/barrier"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/imageView12" />

        <EditText
            android:id="@+id/edt_product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edt_product"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/txv_product_name"
            app:layout_constraintStart_toEndOf="@+id/barrier" />

        <TextView
            android:id="@+id/txv_product_serial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/product_serial"
            app:layout_constraintEnd_toEndOf="@+id/barrier"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txv_product_name" />

        <EditText
            android:id="@+id/edt_product_serial"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edt_product"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/txv_product_serial"
            app:layout_constraintStart_toEndOf="@+id/barrier" />

        <TextView
            android:id="@+id/txv_product_seller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/product_seller"
            app:layout_constraintEnd_toEndOf="@+id/barrier"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txv_product_serial" />

        <EditText
            android:id="@+id/edt_product_seller"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edt_product"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/txv_product_seller"
            app:layout_constraintStart_toEndOf="@+id/barrier" />

        <TextView
            android:id="@+id/txv_product_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/product_model"
            app:layout_constraintEnd_toEndOf="@+id/barrier"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txv_product_seller" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edt_product"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@id/txv_product_model"
            app:layout_constraintStart_toEndOf="@+id/barrier" />

        <TextView
            android:id="@+id/txv_product_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/product_category"
            app:layout_constraintEnd_toEndOf="@+id/barrier"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txv_product_model"
            tools:ignore="HardcodedText" />

        <Spinner
            android:id="@+id/sp_product_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView13"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            app:layout_constraintTop_toBottomOf="@+id/editText2" />

        <TextView
            android:id="@+id/txv_product_subcategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/product_subcategory"
            app:layout_constraintEnd_toEndOf="@+id/barrier"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txv_product_category" />

        <Spinner
            android:id="@+id/sp_product_subcategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/sp_product_category"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            app:layout_constraintTop_toBottomOf="@+id/sp_product_category" />

        <TextView
            android:id="@+id/txv_product_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/product_type"
            app:layout_constraintEnd_toEndOf="@+id/barrier"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txv_product_subcategory" />

        <Spinner
            android:id="@+id/sp_product_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/sp_product_subcategory"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            app:layout_constraintTop_toBottomOf="@+id/sp_product_subcategory" />

        <TextView
            android:id="@+id/txv_product_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/product_description"
            app:layout_constraintEnd_toEndOf="@+id/barrier"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txv_product_type" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="84dp"
            android:background="@drawable/shape_edt_product"
            android:ems="10"
            android:inputType="textMultiLine"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            app:layout_constraintTop_toBottomOf="@+id/txv_product_description" />

        <TextView
            android:id="@+id/txv_product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/product_price"
            app:layout_constraintEnd_toEndOf="@+id/barrier"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/editText3" />

        <EditText
            android:id="@+id/edt_product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edt_product"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@id/txv_product_price"
            app:layout_constraintStart_toEndOf="@+id/barrier" />

        <TextView
            android:id="@+id/txv_product_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/product_date"
            app:layout_constraintEnd_toEndOf="@+id/barrier"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txv_product_price" />

        <EditText
            android:id="@+id/edt_product_date"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/shape_edt_product"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@id/txv_product_date"
            app:layout_constraintStart_toEndOf="@+id/barrier" />

        <TextView
            android:id="@+id/txv_product_url"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_marginTop="24dp"
            android:text="@string/product_url"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txv_product_date" />

        <EditText
            android:id="@+id/edt_product_url"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:background="@drawable/shape_edt_product"
            android:ems="10"
            android:inputType="textWebEditText"
            app:layout_constraintBaseline_toBaselineOf="@id/txv_product_url"
            app:layout_constraintEnd_toEndOf="@+id/edt_product_date"
            app:layout_constraintStart_toEndOf="@+id/txv_product_url" />

        <TextView
            android:id="@+id/txv_product_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/product_notes"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txv_product_url" />

        <EditText
            android:id="@+id/editText7"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_edt_product"
            android:ems="10"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="@+id/edt_product_url"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txv_product_note" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="41dp"
            android:layout_height="41dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/edt_product_serial"
            app:layout_constraintTop_toBottomOf="@+id/edt_product_name"
            app:srcCompat="@drawable/bidi" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
