<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/android.R.id.content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jaime.inventoryprovider.ui.dependency.AddDependencyActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_addeditSector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:titleTextColor="@android:color/white" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_sector_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tb_addeditSector">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_sector_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_dependencyName" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_sector_sortname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_sector_name">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_sector_sortname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_dependencySortname" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_sector_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_sector_sortname">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_sector_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_dependencyDescription" />
    </android.support.design.widget.TextInputLayout>
</android.support.constraint.ConstraintLayout>
